--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -45,3 +45,17 @@ E-mail: sadw621@gmail.com */
 .navbar {
   opacity: 0.7;
 }
+
+.weather {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2.5rem;
+  margin: 0 auto;
+}
+
+.weather_data {
+  font-weight: bold;
+}
+
+
